--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "jest": "^27.3.1",
-    "miniprogram-automator": "^0.11.0"
+    "miniprogram-automator": "^0.11.0",
+    "miniprogram-sm-crypto": "^0.3.6"
   },
   "name": "languageget",
   "description": "一款微信小程序版的“罗塞塔”或“百词斩”学习语言的软件",
