--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -5,9 +5,16 @@
   "scripts": {
     "test": "jest"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "miniprogram-automator": "^0.11.0"
   },
