--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -8,5 +8,8 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "jest": "^27.3.1"
+  }
 }
